add place and trip crud methods